RESOLVED FIXED170936
Safari crash when clicking phone number data detector popover button
https://bugs.webkit.org/show_bug.cgi?id=170936
Summary Safari crash when clicking phone number data detector popover button
Tim Horton
Reported 2017-04-18 00:58:02 PDT
Safari crash when clicking phone number data detector popover button
Attachments
Patch (7.80 KB, patch)
2017-04-18 00:58 PDT, Tim Horton
no flags
Patch (9.57 KB, patch)
2017-04-18 02:00 PDT, Tim Horton
no flags
Patch (9.62 KB, patch)
2017-04-18 02:32 PDT, Tim Horton
no flags
Patch (2.10 KB, patch)
2017-04-18 13:29 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-04-18 00:58:42 PDT
Tim Horton
Comment 2 2017-04-18 02:00:48 PDT
Tim Horton
Comment 3 2017-04-18 02:32:47 PDT
Tim Horton
Comment 4 2017-04-18 13:29:00 PDT
Wenson Hsieh
Comment 5 2017-04-18 13:29:57 PDT
Comment on attachment 307409 [details] Patch rs=me
WebKit Commit Bot
Comment 6 2017-04-18 13:59:41 PDT
Comment on attachment 307409 [details] Patch Clearing flags on attachment: 307409 Committed r215479: <http://trac.webkit.org/changeset/215479>
WebKit Commit Bot
Comment 7 2017-04-18 13:59:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.