Safari crash when clicking phone number data detector popover button https://bugs.webkit.org/show_bug.cgi?id=170936 <rdar://problem/31416570>

Reviewed by Wenson Hsieh.

* platform/spi/mac/DataDetectorsSPI.h:
Soft-link the phone number key from the correct framework.


Canonical link: https://commits.webkit.org/187887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215479 268f45cc-cd09-0410-ab3c-d52691b4dbfc